spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__long_duplicate_named_arg.snap
---
source: spade-tests/src/hir_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: a specified multiple times
  ┌─ testinput:3:20
  │
3 │     test$(a: true, a: true, b: true)
  │           -        ^ Later specified here
  │           │         
  │           First specified here


