spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__long_fake_named_arg.snap
---
source: spade-tests/src/hir_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: No such argument: c
  ┌─ testinput:3:20
  │
3 │     test$(a: true, c: true, b: true)
  │                    ^ No such argument


