spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__named_struct_patterns_errors_if_missing_bindings.snap
---
source: spade-tests/src/hir_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Missing argument: b
  ┌─ testinput:4:10
  │
4 │     Test$(a: true)
  │          ^^^^^^^^^
  │          │
  │          Missing argument
  │          Missing b


