spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__named_struct_patterns_errors_if_multiple_bindings_to_same_name.snap
---
source: spade-tests/src/hir_lowering.rs
---
struct Test{a: bool, b: bool}

fn main() -> Test {
    Test$(a: true, a: true, b: true)
}


error: a specified multiple times
  ┌─ testinput:4:20
  │
1 │ struct Test{a: bool, b: bool}
  │ ----------------------------- struct defined here
  ·
4 │     Test$(a: true, a: true, b: true)
  │           -        ^ Later specified here
  │           │         
  │           First specified here


