spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__shorthand_duplicate_named_argument_missing.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn test(a: bool, b: bool) -> bool __builtin__
fn main() -> bool {
    let (a, b, c) = (true, true, true);
    test$(a, a, b)
}


error: a specified multiple times
  ┌─ testinput:4:14
  │
1 │ fn test(a: bool, b: bool) -> bool __builtin__
  │ --------------------------------------------- function defined here
  ·
4 │     test$(a, a, b)
  │           -  ^ Later specified here
  │           │   
  │           First specified here


