spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__shorthand_named_argument_missing.snap
---
source: spade-tests/src/hir_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Missing argument: b
  ┌─ testinput:4:10
  │
4 │     test$(a)
  │          ^^^ Missing argument: b


