spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__signextending_to_shorter_value.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn main() -> int<4> {
    let a: int<8> = 0;
    let b: int<4> = std::conv::sext(a);
    b
}


error: Sign-extending to a shorter value
  ┌─ testinput:3:21
  │
3 │     let b: int<4> = std::conv::sext(a);
  │                     ^^^^^^^^^^^^^^^^^^
  │                     │               │
  │                     │               This value is 8 bits
  │                     The value is sign-extended to 4 bits here
  │
  = note: 
  = Sign-extension cannot decrease width, use trunc instead
  │
3 │     let b: int<4> = trunc(a);
  │                     ~~~~~


